# Estatement_generator

./: .env.example  .gitignore  README.md  TECHNICAL.md  Technical_Analysis_Current_Flow_and_Production_Strategy.docx  _test_gen.py  bench_libs.py  create_analysis_doc.py  generator.py  generator_rl.py  metadata.json  package-lock.json  package.json  server.ts  vite.config.ts
.claude/: settings.local.json
pdf_oxide_gen/: Cargo.toml
pdf_oxide_gen/sql/: mongo-index.js  schema.sql
pdf_oxide_gen/src/: customer.rs  lib.rs  main.rs  pdf_primitives.rs  perf.rs  render.rs  statement.rs
pdf_oxide_gen/src/mongo/: config.rs  mod.rs  repository.rs
pdf_oxide_gen/src/pipeline/: decode.rs  legacy_pdf.rs  mod.rs  mongo_fetch.rs  pdf_workers.rs  producer.rs  queue_pipeline.rs  queue_producer.rs  status_updater.rs  writer.rs
pdf_oxide_gen/src/sql/: config.rs  mod.rs  queue.rs
scripts/: test-rust-pdf.mjs
src/: App.tsx
src/services/: dataService.ts  pdfService.ts  piscinaWorker.ts
