[package]
name        = "pdf_oxide_gen"
version     = "0.1.0"
edition     = "2021"
description = "Avanza Bank Statement PDF generator — pdf-oxide + MongoDB + Rayon parallel"

[lib]
name = "pdf_oxide_gen"
path = "src/lib.rs"

[[bin]]
name = "pdf_oxide_gen"
path = "src/main.rs"

[dependencies]
pdf_oxide   = "0.3"
rayon       = "1.10"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
clap        = { version = "4", features = ["derive"] }
anyhow      = "1"
mongodb     = "3.2"
tokio       = { version = "1", features = ["rt-multi-thread"] }
futures     = "0.3"
crossbeam-channel = "0.5"

[profile.release]
opt-level   = 3
lto         = "thin"
codegen-units = 1
strip       = true
